Enhance README with build and packaging instructions
Added instructions for building the project, creating a custom runtime image, and packaging the app as a Windows .exe using jlink and jpackage.